--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ ahash = { version = "0.8.1", default-features = false, features = [
   "no-rng", # we don't need DOS-protection for what we use ahash for
   "std",
 ] }
-egui = { version = "0.31", default-features = false }
+egui = {default-features = false, git="https://github.com/emilk/egui", rev="81b7e7f05a6b03fa2cd5bdc6d4ce5f598e16c628" }
 itertools = "0.13"
 log = { version = "0.4", features = ["std"] }
 serde = { version = "1", features = ["derive"], optional = true }
@@ -38,7 +38,7 @@ serde = { version = "1", features = ["derive"], optional = true }
 
 [dev-dependencies]
 # For the example:
-eframe = { version = "0.31", default-features = false, features = [
+eframe = { git="https://github.com/emilk/egui", rev="81b7e7f05a6b03fa2cd5bdc6d4ce5f598e16c628", default-features = false, features = [
   "default_fonts", # Embed the default egui fonts.
   "glow",          # Use the glow rendering backend. Alternative: "wgpu".
   "persistence",   # Enable restoring app state when restarting the app.
